--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -83,6 +83,8 @@ body {
     margin: 0;
     background-color: var(--body-color);
     color: var(--text-color);
+    /* For animation dark mode */
+    transition: 400ms;
 }
 
 h1,
@@ -114,11 +116,51 @@ button {
 
 /*========== THEME ==========*/
 /*========== Variables for Dark Theme ==========*/
-
+body.dark-theme {
+    --first-color: hsl(31, 76%, 74%);
+    --button-color: hsl(0, 0%, 24%);
+    --button-color-alt: hsl(0, 0%, 28%);
+    --title-color: hsl(0, 0%, 95%);
+    --text-color: hsl(0, 0%, 75%);
+    --body-color: hsl(0, 0%, 12%);
+    --container-color: hsl(0, 0%, 16%);
+    --border-color: hsl(0, 0%, 20%);
+}
 
 /*========== Button Dark/Light ==========*/
+.change-theme {
+    color: var(--title-color);
+    font-size: 1.25rem;
+    cursor: pointer;
+}
 
+.dark-theme .change-theme,
+.dark-theme .nav__toggle,
+.dark-theme .nav__shop,
+.dark-theme .button--gray {
+    color: hsl(0, 0%, 15%);
+}
 
+.dark-theme .scroll-header {
+    box-shadow: 0 1px 4px hsla(0, 0%, 4%, .3);
+}
+
+.scroll-header .change-theme,
+.scroll-header .nav__toggle,
+.scroll-header .nav__shop {
+    color: var(--title-color);
+}
+
+.dark-theme::-webkit-scrollbar {
+    background: hsl(0, 0%, 30%);
+}
+
+.dark-theme .products__card:hover,
+.dark-theme .featured__card:hover,
+.dark-theme .new__card:hover,
+.dark-theme .scrollup:hover {
+    box-shadow: 0 8px 32px #494949;
+}
 
 /*========== UTILITY CLASSES ==========*/
 .container {
@@ -168,7 +210,9 @@ button {
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    transition: 300ms;
+    /* For animation dark mode */
+    transition: 400ms;
+
 }
 
 .nav {
@@ -262,6 +306,9 @@ button {
 }
 
 /* Active link */
+.active-link {
+    color: var(--first-color);
+}
 
 /*========== HOME ==========*/
 .home__container {
@@ -516,52 +563,655 @@ button {
     box-shadow: 0 8px 32px hsla(0, 0%, 10%, .1);
 }
 
+/*========== TESTIMONIAL ==========*/
+.testimonial__container {
+    row-gap: 4rem;
+}
 
+.testimonial__quote {
+    display: inline-flex;
+    background-color: var(--container-color);
+    padding: .5rem .75rem;
+    font-size: 1.5rem;
+    color: var(--first-color);
+    box-shadow: 0 4px 12px hsla(0, 0%, 20%, .1);
+    margin-bottom: var(--mb-2);
+}
 
+.testimonial__desctiption {
+    margin-bottom: var(--mb-1);
+}
 
+.testimonial__date {
+    font-size: var(--normal-font-size);
+    margin-bottom: var(--mb-2);
+}
 
+.testimonial__perfil {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    margin-bottom: 7rem;
+}
 
+.testimonial__perfil-img {
+    width: 60px;
+    height: 60px;
+    border-radius: 3rem;   
+}
 
+.testimonial__perfil-data {
+    display: flex;
+    flex-direction: column;
+    row-gap: .5rem;
+}
 
+.testimonial__perfil-name {
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    color: var(--title-color);
+}
 
+.testimonial__perfil-detail {
+    font-size: var(--small-font-size);
+}
 
+.testimonial__images {
+    position: relative;
+}
 
+.testimonial__img,
+.testimonial__square {
+    width: 250px;
+}
 
+.testimonial__square {
+    height: 250px;
+    background-color: var(--first-color);
+    margin-left: auto;
+}
 
+.testimonial__img {
+    position: absolute;
+    right: 2rem;
+    top: 3rem;
+}
 
+/* Swiper class */
+.testimonial-swiper {
+    margin-left: initial;
+    margin-right: initial;
+}
 
+.swiper-button-next::after,
+.swiper-button-prev::after {
+    content: '';
+}
 
+.swiper-button-next,
+.swiper-button-prev {
+    top: initial;
+    bottom: 5%;
+    width: initial;
+    height: initial;
+    background-color: var(--container-color);
+    box-shadow: 0 4px 12px hsla(0, 0%, 20%, .1);
+    padding: .25rem;
+    font-size: 1.5rem;
+    color: var(--first-color);
+}
 
+.swiper-button-next {
+    right: initial;
+    left: 4rem;
+}
 
+/*========== NEW ==========*/
+.new__card {
+    position: relative;
+    text-align: center;
+    background-color: var(--container-color);
+    padding-top: 2rem;
+    border: 1px solid var(--border-color);
+    overflow-y: hidden;
+    transition: 300ms;
+}
 
+.new__tag {
+    background-color: var(--first-color);
+    padding: .5rem 1rem;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: var(--small-font-size);
+    font-weight: var(--font-medium);
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    transition: 300ms;
+}
 
+.new__img {
+    height: 215px;
+    margin-bottom: var(--mb-1);
+}
 
+.new__title,
+.new__price {
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-bold);
+}
 
+.new__title {
+    text-transform: uppercase;
+    margin-bottom: var(--mb-0-75);
+}
 
+.new__price {
+    display: block;
+    color: var(--first-color);
+    transition: 300ms;
+}
 
+.new__button {
+    font-size: var(--small-font-size);
+    transform: translateY(1rem);
+    opacity: 0;
+}
 
+.new__card:hover {
+    background-color: var(--first-color);
+    box-shadow: 0 12px 32px hsla(0, 0%, 20%, .1);
+    padding: 2rem 0 3rem;
+}
 
+.new__card:hover .new__tag {
+    background-color: var(--button-color);
+}
 
+.new__card:hover .new__button {
+    transform: translateY(0);
+    opacity: 1;
+}
 
+.new__card:hover .new__title {
+    color: hsl(0, 0%, 15%);
+}
 
+.new__card:hover .new__price {
+    color: hsl(0, 0%, 15%);
+    margin-bottom: var(--mb-1-5);
+}
 
+/*========== NEWSLETTER ==========*/
+.newsletter__bg {
+    background-color: var(--first-color);
+    padding: 3rem 1.5rem;
+    text-align: center;
+    row-gap: 2.5rem;
+}
 
+.newsletter__title {
+    font-size: var(--h1-font-size);
+    color: hsl(0, 0%, 15%);
+    margin-bottom: var(--mb-1-5);
+}
 
+.newsletter__description {
+    color: hsl(0, 0%, 35%);
+}
 
+.newsletter__subscribe {
+    display: flex;
+    flex-direction: column;
+    row-gap: .75rem;
+}
 
+.newsletter__input {
+    border: none;
+    outline: none;
+    background-color: hsl(0, 0%, 94%);
+    padding: 1.25rem 1rem;
+    color: hsl(0, 0%, 15%);
+}
 
+/*========== FOOTER ==========*/
+.footer__container {
+    row-gap: 2rem;
+    border-bottom: 1px solid var(--border-color);
+    padding-bottom: 3rem;
+}
 
+.footer__title {
+    font-size: var(--h2-font-size);
+    margin-bottom: var(--mb-1-5);
+}
 
+.footer__list,
+.footer__links {
+    display: flex;
+    flex-direction: column;
+    row-gap: .75rem;
+}
 
+.footer__link {
+    color: var(--text-color);
+}
 
+.footer__link:hover {
+    color: var(--title-color);
+}
 
+.footer__social {
+    display: flex;
+    column-gap: 1rem;
+}
 
+.footer__social-link {
+    font-size: 1.25rem;
+    color: var(--text-color);
+}
 
+.footer__social-link:hover {
+    color: var(--title-color);
+}
 
+.footer__copy {
+    display: block;
+    margin: 3.5rem 0 1rem;
+    text-align: center;
+    font-size: var(--smaller-font-size);
+    color: var(--text-color-light);
+}
 
+/*========== SCROLL UP ==========*/
+.scrollup {
+    position: fixed;
+    right: 1rem;
+    bottom: -30%;
+    background-color: var(--container-color);
+    box-shadow: 0 4px 12px hsla(0, 0%, 20%, .1);
+    display: inline-flex;
+    padding: .25rem;
+    z-index: var(--z-tooltip);
+    opacity: .8;
+    transition: 400ms;
+}
 
+.scrollup:hover {
+    opacity: 1;
+}
 
+.scrollup__icon {
+    font-size: 1.5rem;
+    color: var(--first-color);
+}
 
+/* Show Scroll UP */
+.show-scroll {
+    bottom: 3rem;
+}
+
+/*========== SCROLL BAR ==========*/
+::-webkit-scrollbar {
+    width: .6rem;
+    background: hsl(0, 0%, 74%);
+}
+
+::-webkit-scrollbar-thumb {
+    background: hsl(0, 0%, 17%);
+    border-radius: .75rem;
+    transition: 300ms;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: hsl(0, 0%, 30%);
+}
+
+/*========== CART ==========*/
+.cart {
+    position: fixed;
+    background-color: var(--body-color);
+    z-index: var(--z-fixed);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: -100%;
+    padding: 3.5rem 2rem;
+    transition: 400ms;
+}
+
+.cart__title-center {
+    font-size: var(--h2-font-size);
+    text-align: center;
+    margin-bottom: var(--mb-3);
+}
+
+.cart__close {
+    font-size: 2rem;
+    color: var(--title-color);
+    position: absolute;
+    top: 1.25rem;
+    right: .9rem;
+    cursor: pointer;
+}
+
+.cart__container {
+    display: grid;
+    row-gap: 1.5rem;
+}
+
+.cart__card {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+}
+
+.cart__box {
+    background-color: var(--container-color);
+    padding: .75rem 1.25rem;
+    border: 1px solid var(--border-color);
+}
+
+.cart__img {
+    width: 50px;
+}
+
+.cart__title {
+    font-size: var(--normal-font-size);
+    margin-bottom: var(--mb-0-5);
+}
+
+.cart__price {
+    display: block;
+    font-size: var(--small-font-size);
+    color: var(--first-color);
+    margin-bottom: var(--mb-1-5);
+}
+
+.cart__amount,
+.cart__amount-content {
+    display: flex;
+    align-items: center;
+}
+
+.cart__amount {
+    column-gap: 3rem;
+}
+
+.cart__amount-content {
+    column-gap: 1rem;
+}
+
+.cart__amount-box {
+    display: inline-flex;
+    padding: .25rem;
+    background-color: var(--container-color);
+    border: 1px solid var(--border-color);
+    cursor: pointer;
+}
+
+.cart__amount-trash {
+    font-size: 1.15rem;
+    color: var(--first-color);
+    cursor: pointer;
+}
+
+.cart__prices {
+    margin-top: 6rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cart__prices-item {
+    font-size: var(--small-font-size);
+}
+
+.cart__prices-total {
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+}
+
+/* Show Cart */
+.show-cart {
+    right: 0;
+}
+
+/*========== BREAKPOINTS ==========*/
+/* For small devices */
+@media screen and (max-width: 320px) {
+    .container {
+        margin-left: var(--mb-1);
+        margin-right: var(--mb-1);
+    }
+    
+    .home__img-bg {
+        width: 220px;
+    }
+    .home__title {
+        font-size: var(--h1-font-size);
+    }
+    .home__button {
+        font-size: var(--smaller-font-size);
+    }
+
+    .story__square,
+    .story__img,
+    .testimonial__square,
+    .testimonial__img {
+        width: 180px;
+    }
+    .story__square,
+    .testimonial__square  {
+        height: 180px;
+    }
+
+    .products__container {
+        grid-template-columns: repeat(1, 180px);
+        justify-content: center;
+    }
+}
+
+/* For medium devices */
+@media screen and (min-width: 576px) {
+    .home__img-bg {
+        width: 340px;
+    }
+    
+    .featured__container {
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
+        align-items: flex-start;
+        gap: 1.5rem;
+    }
+
+    .footer__container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 767px) {
+    .section {
+        padding: 8rem 0 1rem;
+    }
+
+    .cart {
+        width: 420px;
+        box-shadow: -2px 0 4px hsla(0, 0%, 15%, .1);
+    }
+
+    .nav {
+        height: calc(var(--header-height) + 1.5rem);
+        justify-content: initial;
+        column-gap: 3rem;
+    }
+    .nav__toggle,
+    .nav__close {
+        display: none;
+    }
+    .nav__list {
+        flex-direction: row;
+        column-gap: 2.5rem;
+    }
+    .nav__link {
+        text-transform: initial;
+        font-size: var(--normal-font-size);
+    }
+    .nav__btns {
+        margin-left: auto;
+    }
+
+    .home__container {
+        padding-top: 6rem;
+        grid-template-columns: 1fr max-content;
+        align-items: center;
+    }
+    .home__img-bg {
+        order: 1;
+        transform: translateY(1.5rem, -6rem);
+    }
+    .home__data {
+        padding: 0 0 3rem 6rem;
+    }
+    .home__social {
+        top: 47%;
+        column-gap: 2rem;
+    }
+
+    .featured__title,
+    .featured__price,
+    .new__title,
+    .new__price {
+        font-size: var(--normal-font-size);
+    }
+
+    .story__container,
+    .testimonial__container,
+    .newsletter__bg {
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+    }
+    .story__section-title {
+        text-align: initial;
+    }
+    .story__section-title::before {
+        margin: initial;
+    }
+    .story__images {
+        order: -1;
+    }
+
+    .products__container {
+        grid-template-columns: repeat(3, 200px);
+        justify-content: center;
+        gap: 2.5rem;
+    }
+    .products__card {
+        padding: 2rem 0;
+    }
+    .products__img {
+        height: 155px;
+    }
+
+    .newsletter__bg {
+        text-align: initial;
+        column-gap: 2rem;
+        padding: 4.5rem;
+    }
+    .newsletter__subscribe {
+        flex-direction: row;
+    }
+    .newsletter__input {
+        width: 100%;
+    }
+    
+    .footer__container {
+        grid-template-columns: repeat(4, max-content);
+        justify-content: space-between;
+    }
+    .footer__title {
+        font-size: var(--h3-font-size);
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .section__title {
+        font-size: var(--h2-font-size);
+    }
+
+    .home__container {
+        column-gap: 2rem;
+    }
+    .home__img-bg {
+        width: 480px;
+        height: 680px;
+    }
+    .home__img {
+        width: 420px;
+    }
+    .home__social {
+        left: -6rem;
+    }
+    .home__data {
+        padding: 0 0 8rem 6rem;
+    }
+
+    .featured__container {
+        grid-template-columns: repeat(3, 312px);
+        padding-top: 2rem;
+    }
+
+    .story__container,
+    .testimonial__container {
+        column-gap: 8rem;
+    }
+
+    .story__square,
+    .story__img,
+    .testimonial__square,
+    .testimonial__img {
+        width: 450px;
+    }
+
+    .story__square,
+    .testimonial__square {
+        height: 450px;
+    }
+
+    .products__container,
+    .new__container {
+        padding-top: 2rem;
+    }
+
+    .testimonial__container {
+        padding-bottom: 4rem;
+    }
+}
+
+/* For large devices */
+@media screen and (min-width: 1024px) {
+    .container {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .story__container,
+    .testimonial__container {
+        column-gap: 13rem;
+        padding-top: 3rem;
+    }
+    .story__img {
+        left: 5rem;
+        top: -5rem;
+    }
+    
+    .testimonial__img {
+        right: 5rem;
+        top: 5rem;
+    }
+
+    .scrollup {
+        right: 3rem;
+    }
+}
 
 
 
